# pm

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
docs/ru/: README.md
scripts/: install-linux.sh  install-macos.sh  install-windows.ps1
src/: backup.rs  clipboard.rs  config.rs  crypto.rs  entry.rs  main.rs  prompt.rs  session.rs  store.rs
